# sg-sharding-xp

./: Cargo.toml  README.md
results/: experiment_1_5000x1000_seed0.csv  experiment_1_5000x1000_seed0.txt  experiment_1_5000x1000_seed1.csv  experiment_1_5000x1000_seed1.txt  experiment_1_5000x1000_seed2.csv  experiment_1_5000x1000_seed2.txt  experiment_1_5000x1000_seed3.csv  experiment_1_5000x1000_seed3.txt  experiment_1_5000x1000_seed4.csv  experiment_1_5000x1000_seed4.txt  experiment_1_5000x1000_seed5.csv  experiment_1_5000x1000_seed5.txt  experiment_1_5000x1000_seed6.csv  experiment_1_5000x1000_seed6.txt  experiment_1_5000x1000_seed7.csv  experiment_1_5000x1000_seed7.txt  experiment_1_5000x1000_seed8.csv  experiment_1_5000x1000_seed8.txt  experiment_1_5000x1000_seed9.csv  experiment_1_5000x1000_seed9.txt  experiment_2a_5000x1000_seed1.csv  experiment_2a_5000x1000_seed1.txt  experiment_2a_5000x1000_seed2.csv  experiment_2a_5000x1000_seed2.txt  experiment_2a_5000x1000_seed3.csv  experiment_2a_5000x1000_seed3.txt  experiment_2a_5000x1000_seed4.csv  experiment_2a_5000x1000_seed4.txt  experiment_2a_5000x1000_seed5.csv  experiment_2a_5000x1000_seed5.txt  experiment_2b_5000x1000_seed1.csv  experiment_2b_5000x1000_seed1.txt  experiment_2b_5000x1000_seed2.csv  experiment_2b_5000x1000_seed2.txt  experiment_2b_5000x1000_seed3.csv  experiment_2b_5000x1000_seed3.txt  experiment_2b_5000x1000_seed4.csv  experiment_2b_5000x1000_seed4.txt  experiment_2b_5000x1000_seed5.csv  experiment_2b_5000x1000_seed5.txt  (+40 more)
src/: bitset.rs  experiment1.rs  experiment2.rs  experiment3.rs  lib.rs  (+4 more)
